# tradingview

./: .env.template  Makefile  README.md  main.py  pyproject.toml  stocks.csv
