[tool.poetry]
name = "tradingview"
version = "0.1.0"
description = ""
authors = ["Michel Rodrigues <michel.rodrigues86@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.15.2"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
